syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer {
	  rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
}

message CustomerLookupModel {
	int32 userId = 1;
}

message CustomerModel {
	string name = 1;
}
